# GDLL2022

./: README.md
Common/: sampler_utils.py  utils_GraphEmbedding.py
Feature Extractor/: app.py  extraction.py  feature_class.py  graph.py  io.py  readme.md  utils.py
GDLLGraph/: GDLLGraph.py  README.md  __init__.py
GNN/: GCN-training-example-on-Cora.py  GIN-train.py
Graph Feature Extractor/: GDLLGraph.py  README.md  betweenness_centrality.txt  cliques.txt  closeness_centrality.txt  degree_centrality.txt  degrees.txt  graphFeature.py  main.py  nodeFeature.py  page_rank.txt  shortest_path.txt
Graph-Embedding/: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
Graph-Embedding/src/: graph_embedding.ipynb  graph_embedding.py
Graph-Embedding/src/.ipynb_checkpoints/: graph_embedding-checkpoint.ipynb
Graph-Embedding/src/GDLLGraph/: GDLLGraph.py  README.md
Graph-Embedding/src/data/: ML_input.csv  cora - copy1.content.embedding  cora.content.embedding  deepwalk_input.csv  graph_embedding.ipynb
Graph-Embedding/src/data/BlogCatalog/: readme.txt
Graph-Embedding/src/data/cora/: citeseer - Copy.cites  cora - copy.cites  cora - copy1.cites  cora - copy1.content
Graph-Embedding/src/dgllge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
Graph-Embedding/src/ge/: Classifiers.py  GDLLGraph.py  __init__.py  biasedRandomWalk.py  copyNOde2.py  copyNode2vec.py  deepWalk.py  first.py  main_ge.py  main_trainClf.py  node.py  node2vec.py  randomWalkEmbedding.py  skipgram.py  struc2vec.py  utils.py
Graph-Embedding/src/ge/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
Graph-Embedding/src/ge/temp_struc2vec/: gamma.pkl  layers_adj.pkl  norm_weights_distance-layer-0.pkl  norm_weights_distance-layer-1.pkl  norm_weights_distance-layer-2.pkl
Graph-Embedding/src/temp_struc2vec/: average_weight  degreelist.pkl  layers_accept.pkl  layers_alias.pkl  structural_dist.pkl
graph/: GDLLGraph.py
graphPartitioning/: .classpath  .gitignore  .project  Snap.20211127.115052.48872.0007.trc  javacore.20211127.115052.48872.0004.txt  javacore.20211127.115052.48872.0009.txt  javacore.20211127.115052.48872.0010.txt  javacore.20211127.115154.48872.0008.txt  pom.xml
graphSampler/: README.md  __init__.py  base.py  example.py  graphSampler README.md  sampler.py  (+2 more)
(+149 files in other folders)
