[metadata]
name = dgllge
version = 1.0.3
author = Irfan Ullah
author_email = irfan@khu.ac.kr
description = Graph Embedding Package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sahibzada-irfanullah/Graph-Embedding
project_urls =
    Bug Tracker = https://github.com/sahibzada-irfanullah/Graph-Embedding/issues
classifiers =
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src